yaml/sfa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.test.yaml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: sfa
  name: sfa-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sfa
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.test.yaml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: sfa
    spec:
      containers:
        - image: 10.230.7.2/eserv-tst-ns/sfa:latest 
          name: sfa-deployment
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: "/home/node/app/.env.production"
              subPath: env.production
              name: env-configmap-volume
              
      restartPolicy: Always
      imagePullSecrets:
        - name: eserv-tst-ns-sfa-image-pull-secret
      volumes:
        - name: env-configmap-volume
          configMap:
            name: sfa-env-configmap
    #Test change for cd test
status: {}
