yaml/sfa-ingressroute.yaml
#The commented out sections below are for when the application is set up for SSL
#They should be uncommented out when application is SSL enabled
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sfa-ingressroute
  namespace: sfa
  #The commented out section below is for SSL redirects
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  #    nginx.ingress.kubernetes.io/rewrite-target: /
  #    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  entryPoints:
          #    - websecure
    - websecure
      #    - web
      #    - api
    #websecure is the entry point for HTTPS connections
    #    - websecure
  routes:
    - kind: Rule
      #match requests to this domain
      match: Host(`test.sfa-admin.ynet.gov.yk.ca`)
      services:
        - name: sfa-svc
          port: 3000
          weight: 10

  tls:
    secretName: sfa-tls-secret
    domains:
    - main: test.sfa-admin.ynet.gov.yk.ca
      sans:
      - test.sfa-admin.ynet.gov.yk.ca
